--- a/overrides/partials/main.html
+++ b/overrides/partials/main.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+<script async data-uid="730f39af7b" src="https://fivesixseven.kit.com/730f39af7b/index.js"></script>
 
 {% block announce %}
 
